# nucleus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
common/: MCP9808.c  MCP9808.h  events.c  events.h  mqtt.c  mqtt.h  msg_fifo.c  msg_fifo.h
daemon/: CMakeLists.txt
daemon/common/: comms.c  comms.h  sensor.c  task.c  weather.c
daemon/legacy/mqtt/: makefile
daemon/src/: comms.c  comms.h  comms_sm.c  comms_sm.h  daemon.c  daemon_events.c  daemon_events.h  daemon_sm.c  daemon_sm.h  events.c  events.h  json.c  json.h  makefile  mqtt.c  mqtt.h  outside.c  sensor.c  sensor.h  timer.c  timer.h  timestamp.c  timestamp.h  weather.c  weather.h  weather_sm.c  weather_sm.h
display/: inkdisplay.py
firmware/node/: Makefile  node.c
firmware/node32/: .gitignore  CMakeLists.txt  sdkconfig
firmware/node32/main/: CMakeLists.txt  comms.c  comms.h  dataqueue.c  dataqueue.h  mqtt.c  mqtt.h  node32.c  sensing.c  sensing.h  types.h  weather.c  weather.h
firmware/pico/: CMakeLists.txt  README.md  accelerometer.h  build.sh  clean.sh  debug.sh  deploy.sh  gdb.sh  serial.sh
firmware/pico/common/: lwipopts.h
firmware/pico/src/: accelerometer.c  accelerometer.h  alarm.c  alarm.h  cli.c  cli.h  comms.c  comms.h  config.c  config.h  daemon.c  daemon.h  dns.c  dns.h  eeprom.c  eeprom.h  emitter.c  emitter.h  environment.c  environment.h  gpio.c  gpio.h  i2c.c  i2c.h  lpf.c  lpf.h  node_events.h  node_pico.c  ntp.c  ntp.h  tcp.c  tcp.h  udp.c  udp.h  uptime.c  uptime.h  watchdog.c  watchdog.h  wifi.c  wifi.h
hardware/: temp.c  uuid.c
hardware/common/: aux.c  aux.h  comms.c  comms.h  mqtt.c  mqtt.h  sensor.h  task.h  weather.c  weather.h
hardware/daemon/: daemon.c  fsm.c  fsm.h  makefile  mqtt.c  mqtt.h  sensor.c  sensor.h  state.c  state.h  version.h
hardware/legacy/: state.h
hardware/legacy/temperature/: temp.c
hardware/legacy/uptime/: uptime.c
hardware/mqtt/: makefile  mqttDaemon.c
hardware/temperature/: comms.c  comms.h  makefile  sensor.c  temp.c
hardware/uptime/: uptime.c
hardware/uuid/: uuid.c
homepage/: .app.py.swp  .flaskenv  app.py  config.py  homepage.py  init_database.py  legacy.py  requirements.txt  version.py
homepage/app/: __init__.py  handler.py  models.py  routes.py
homepage/app/templates/: index.html  raw_data.html  raw_events.html
homepage/assets/: custom.css
homepage/templates/: index.html  raw_data.html
scripts/: digest.py  disableipv6.sh  generate_meta.sh  led.sh  request_meta.sh  restart_homepage.sh  restart_mqtt.sh  restart_nodes.sh
tests/: mqtt_tests.c  mqtt_tests.h  tests.c
tools/: plot_environment.py  temp_filter.py
